yoshimi 1.5.2 M

2017-6-3 Will
* Made Invert center key status clearer.
* Identified more scales controls ready for direct access.
* More doc updates.

2017-6-1 Will
* More part map optimisations.
* Part maps now double buffered.

2017-5-31 Will
* Reorganised part map setting to remove multiple calls.
* BugFix: Reverse scale centre was being set as type bool.
* BugFix: Scale ratio values were limited to 127.

2017-5-30 Will
* Improved error traps and reporting.
* Set default full XML saving to 'off'.
  Done for previous consistency.

2017-5-28 Will
* Revised Scales GUI layout.
* Added sane limits to key maps.
* Discovered XML saving anomaly so created new Config switch.
  Forces *all* data to be saved when set.
* dev_notes updates.

2017-5-26 Will
* Started implementation of CLI scales access.
* BugFix: neither .scl or .kbm were checked for no file :(

2017-5-24 Will
* BugFix: LV2 state restore was not setting partmaps.
* Yoshi can now work with both CLI and GUI disabled.
* Doc updates.

2017-5-12 Will
* Merged in Robs SubSynth Overtones/Legato fix.
* Finalised all code and docs for release.
* Set version 1.5.2

2017-5-11 Will
* Reset all controllers now clears the portamento switch.
* Added SubnoteUI correction from Rob.
* Minor change to saved Midi-learned files.
  Supresses artificial top bit when saving, making file more
  understandable, but loading restores it for learn comparisons.
* More AddSynth Voice & SubSyth switches learnable.
* Updated docs.

2017-5-9 Will
* BugFix: Modulator amplitude envelope wasn't enabling.

2017-5-8 Will
* Made Add Voice & Sub filter enables learnable.
  Now labelled as 'On'.
* Removed unnecessary Gui checks from Add & Sub.

2017-5-7 Will
* Improved Midi-learn loading behaviour.
* Gui Updates no longer called from synth.
* Midi-learnable switches now have colour IDs.
* Set master as 1.5.2 rc2
* Updated docs.

2017-5-5 Will
* More 'switches' Midi-learnable:
  AddVoice enable and modulator selection.
  All engine stereo and octave.